--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,26 @@
     transform: rotate(360deg);
   }
 }
+
+.button {
+  background-color: #38b7da; /* Green */
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 0px 10px;
+}
+
+.input {
+  width: 160px;
+  padding: 13px 20px;
+  margin: 0px 10px;
+  box-sizing: border-box;
+}
+
+.container {
+  flex-direction: row;
+}
